boltffi_tests/fixtures/negative_scanner/unsafe_function.rs
#[export]
pub unsafe fn free_handle(handle: u32) {
    let _ = handle;
}
